@@ -3,8 +3,8 @@ package org.httpserver.handler;
 import org.httpserver.request.Request;
 import org.httpserver.response.Response;
 import org.httpserver.response.ResponseBuilder;
+import org.httpserver.server.HttpMethod;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.httpserver.response.ResponseHeaderName.ALLOW;
@@ -13,9 +13,8 @@ import static org.httpserver.server.HttpMethod.HEAD;
 import static org.httpserver.server.HttpMethod.OPTIONS;
 
 public class MethodNotAllowedHandler implements Handler {
-    @Override
-    public List<String> allowedHttpMethods() {
-        return Arrays.asList(HEAD.getHttpMethod(), OPTIONS.getHttpMethod());
+    public List<HttpMethod> allowedHttpMethods() {
+        return List.of(HEAD, OPTIONS);
     }
 
     @Override
