@@ -3,8 +3,8 @@ package org.httpserver.handler;
 import org.httpserver.request.Request;
 import org.httpserver.response.Response;
 import org.httpserver.response.ResponseBuilder;
+import org.httpserver.server.HttpMethod;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.httpserver.response.ResponseHeaderName.ALLOW;
@@ -12,9 +12,8 @@ import static org.httpserver.response.StatusCode.OK;
 import static org.httpserver.server.HttpMethod.*;
 
 public class OptionsHandler implements Handler {
-    @Override
-    public List<String> allowedHttpMethods() {
-        return Arrays.asList(GET.getHttpMethod(), HEAD.getHttpMethod(), OPTIONS.getHttpMethod());
+    public List<HttpMethod> allowedHttpMethods() {
+        return List.of(GET, HEAD, OPTIONS);
     }
 
     @Override
