@@ -3,8 +3,8 @@ package org.httpserver.handler;
 import org.httpserver.request.Request;
 import org.httpserver.response.Response;
 import org.httpserver.response.ResponseBuilder;
+import org.httpserver.server.HttpMethod;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.httpserver.response.StatusCode.OK;
@@ -13,9 +13,8 @@ import static org.httpserver.server.HttpMethod.HEAD;
 
 public class SimpleGetHandler implements Handler {
 
-    @Override
-    public List<String> allowedHttpMethods() {
-        return Arrays.asList(GET.getHttpMethod(), HEAD.getHttpMethod());
+    public List<HttpMethod> allowedHttpMethods() {
+        return List.of(GET, HEAD);
     }
 
     public Response handleResponse(Request request) {
